# windup

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  PLAN.md  README.md
.claude/: CLAUDE.md
benches/: batch_bench.rs
docs/superpowers/plans/: 2026-05-31-tracing-implementation.md
docs/superpowers/specs/: 2026-05-31-tracing-design.md
examples/: advanced.rs  basic.rs  tracing_demo.rs
src/: accumulator.rs  batch.rs  config.rs  controller.rs  error.rs  lib.rs  metrics.rs  stats.rs  trace.rs
tests/: integration.rs
